--- a/.env
+++ b/.env
@@ -14,6 +14,18 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
-APP_SECRET=457c160caa4abac3ea28fe9c0e1fa902
+APP_ENV=
+APP_SECRET=
 ###< symfony/framework-bundle ###
+
+DATABASE_URL=
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=
+JWT_PUBLIC_KEY=
+JWT_PASSPHRASE=
+###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=
+###< nelmio/cors-bundle ###
