--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,6 +43,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/api/users,            roles: PUBLIC_ACCESS, methods: [POST] }
         - { path: ^/authentication_token, roles: PUBLIC_ACCESS }
         - { path: ^/,                     roles: ROLE_USER }
 
